# savecode

./: .gitignore  Makefile  README.md  pyproject.toml  release.ps1  release.sh  setup.py  test_git_file.py
.github/workflows/: publish.yml
savecode/: __init__.py  cli.py  temp.txt
savecode.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
savecode/constants/: __init__.py  reserved_keys.py
savecode/manager/: __init__.py  manager.py
savecode/plugin_manager/: __init__.py  decorators.py  manager.py
savecode/plugins/: __init__.py  extra_args.py  gather.py  save.py
savecode/tests/: __init__.py  test_cli_args.py  test_extra_args.py  test_plugins.py  test_utils.py
savecode/utils/: __init__.py  cli_args.py  colors.py  display.py  error_handler.py  logger.py  output_manager.py  path_utils.py
src/savecode/: __init__.py  __main__.py  cli.py
src/savecode/constants/: __init__.py  reserved_keys.py
src/savecode/plugin_manager/: __init__.py  decorators.py  manager.py
src/savecode/plugins/: __init__.py  extra_args.py  gather.py  git_status.py  save.py
src/savecode/utils/: __init__.py  cli_args.py  clipboard.py  colors.py  display.py  error_handler.py  logger.py  path_utils.py
tests/: __init__.py  conftest.py  test_cli_args.py  test_extra_args.py  test_git_status.py  test_git_status_deleted.py  test_plugins.py  test_utils.py
